# tjtools-python

./: README.md  TODO.md  pyproject.toml
contrib/: tjtools-python-9999.ebuild
contrib/gentoo/dev-python/tjtools-python/: tjtools-python-9999.ebuild
scripts/: razer_config.py
src/tjtools/: acpi_init.py  audio_compare.py  blank_screen.py  brightness.py  common_helpers.py  common_util.py  eeprom_ddr4.py  fancylock.py  flac_md5.py  id3_addtag.py  mp4_addtag.py  ranger_commands.py  sata_alpm.py  sway_battery.py  sway_sensors.py  sysfs_helper.py  system_perf.py  vc_addtag.py  vc_helper.py
src/tjtools/acpi_actions/: ac_adapter.py  battery.py  button.py  common.py  jack.py  thermal_zone.py  video.py  wmi.py
src/tjtools/scripts/: __init__.py  acpi_action.py  backup_manage.py  blank_screen.py  brightness.py  checksum.py  clean_bashhistory.py  cpufreq_perf.py  dosbox_wrap.py  gentoo_sandbox.py  greeter_idle.py  kupdate.py  linklist_analyse.py  mpv_ipc.py  nag_helper.py  openvpn_netns.py  playmedia.py  pulseserver_wrap.py  razer_config.py  rename_vfat.py  rifle_cmd.py  rifle_monitor.py  sshpipe.py  stdcompress.py  strip_utf8bom.py  sway_idle.py  sway_multimedia.py  swayshot.py  touchpad_control.py  waybar_cmus.py  waybar_musicpd.py  zstd_simple.py
src/tjtools/scripts/audio/: __init__.py  album_transcode.py  audio_rename.py  bs1770gain_wrap.py  eac_pretag.py  flac_encode.py  id3_fixenc.py  reflac.py  vc_auto_albumprepare.py  vc_auto_tracknumber.py  vc_cleantags.py  vc_copytags.py  vc_interactive_tag.py  vc_multi_tag.py  vgmdb_albumcredits.py  vgmdb_tracklist.py
src/tjtools_package_tobiasjakobi/: sysfs_helper.py
templates/: top_bar.py
