[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tjtools"
version = "1.0.0"
authors = [
  { name="Tobias Jakobi", email="tjakobi@math.uni-bielefeld.de" },
]
description = "Some Python tools that I use on most of my systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dbus-python>1.3.0",
  "i3ipc>2.2.0",
  "systemd-python>234",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
  "Operating System :: POSIX :: Linux",
]

[project.scripts]
acpi_action = "tjtools.scripts:acpi_action_cli"
backup_manage = "tjtools.scripts:backup_manage_cli"
blank_screen = "tjtools.scripts:blank_screen_cli"
brightness = "tjtools.scripts:brightness_cli"
clean_bashhistory = "tjtools.scripts:clean_bashhistory_cli"
cpufreq_perf = "tjtools.scripts:cpufreq_perf_cli"
gentoo_sandbox = "tjtools.scripts:gentoo_sandbox_cli"
greeter_idle = "tjtools.scripts:greeter_idle_cli"
nag_helper = "tjtools.scripts:nag_helper_cli"
openvpn_netns = "tjtools.scripts:openvpn_netns_cli"
playmedia = "tjtools.scripts:playmedia_cli"
pulseserver_wrap = "tjtools.scripts:pulseserver_wrap_cli"
razer_config = "tjtools.scripts:razer_config_cli"
stdcompress = "tjtools.scripts:stdcompress_cli"
strip_utf8bom = "tjtools.scripts:strip_utf8bom_cli"
sway_idle = "tjtools.scripts:sway_idle_cli"
swayshot = "tjtools.scripts:swayshot_cli"
touchpad_control = "tjtools.scripts:touchpad_control_cli"
zstd_simple = "tjtools.scripts:zstd_simple_cli"

[project.urls]
Homepage = "https://github.com/tobiasjakobi/tjtools-python"
Issues = "https://github.com/tobiasjakobi/tjtools-python/issues"
